--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
     "mongodb": "^6.9.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
-  }
+  },
+  "devDependencies": {}
 }
